<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2010-2016 The MPDroid Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/PLCX_playNext"
        android:title="@string/playNext" />
    <item
        android:id="@+id/PLCX_moveFirst"
        android:title="@string/moveFirst" />
    <item
        android:id="@+id/PLCX_moveLast"
        android:title="@string/moveLast" />
    <item
        android:id="@+id/PLCX_removeFromPlaylist"
        android:title="@string/removeFromPlaylist" />
    <item
        android:id="@+id/PLCX_removeAlbumFromPlaylist"
        android:title="@string/removeAlbumFromPlaylist" />
    <item
        android:id="@+id/PLCX_goto"
        android:title="@string/go_to">
        <menu>
            <item
                android:id="@+id/PLCX_goToAlbum"
                android:title="@string/goToAlbum" />
            <item
                android:id="@+id/PLCX_goToArtist"
                android:title="@string/goToArtist" />
            <item
                android:id="@+id/PLCX_goToAlbumArtist"
                android:title="@string/goToAlbumArtist" />
            <item
                android:id="@+id/PLCX_goToFolder"
                android:title="@string/goToFolder" />
        </menu>
    </item>
</menu>
