<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2010-2015 The MPDroid Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/GMM_Stream"
        android:checkable="true"
        android:orderInCategory="2"
        android:title="@string/stream" />
    <item
        android:id="@+id/GMM_Single"
        android:checkable="true"
        android:orderInCategory="3"
        android:title="@string/singleMode" />
    <item
        android:id="@+id/GMM_Consume"
        android:checkable="true"
        android:orderInCategory="4"
        android:title="@string/consumeMode" />
    <item
        android:id="@+id/GMM_ShowNotification"
        android:checkable="true"
        android:orderInCategory="1"
        android:persistent="true"
        android:title="@string/showNotification" />
    <item
        android:id="@+id/GMM_bonjour"
        android:visible="false" />

</menu>