<!--
  ~ Copyright (C) 2010-2015 The MPDroid Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferencescreen">
    <PreferenceCategory android:title="@string/preferredConnection">
        <PreferenceScreen
            android:key="wifibasedScreen"
            android:summary="@string/wlanBasedSettingsDescription"
            android:title="@string/wlanBasedSettings">
            <PreferenceCategory
                android:key="wifibasedCategory"
                android:title="@string/chooseWLAN" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="defaultCategory"
        android:title="@string/defaultConnection"
        android:visible="false">
        <PreferenceScreen
            android:key="defaultScreen"
            android:summary="@string/defaultSettingsDescription"
            android:title="@string/defaultSettings">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.namelessdev.mpdroid.ConnectionSettings"
                android:targetPackage="com.namelessdev.mpdroid" />
        </PreferenceScreen>
        <!-- 
		<EditTextPreference  
	           android:key="hostname"  
	           android:title="@string/host"  
	           android:summary="@string/hostDescription"
	           />  
	    <EditTextPreference  
	           android:key="port"
	           android:title="@string/port"
	           android:defaultValue="6600"
	           android:summary="@string/portDescription"
	           />  
	    <EditTextPreference
	           android:key="password"
	           android:title="@string/password"
	           android:defaultValue=""
	           android:password="true"
	           android:summary="@string/passwordDescription" /> 
	            -->
    </PreferenceCategory>
</PreferenceScreen>